Kubernetes/Manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: <deployment 이름>
  namespace: <namespace 이름>
  labels:
    <key> : <value>  # Deployment가 관리하는 Pod를 선택하기 위한 레이블
    
spec:
  replicas: <생성할 파드 수>
  selector:
    matchLabels:
      <key> : <value> # Deployment가 관리하는 Pod를 선택하기 위한 레이블
      
  template:
    metadata:
      labels:
        <Pod Key> : <Pod Value> # 각 Pod에 할당되는 레이블
        
    spec:
      nodeSelector:
        <Node key>: <Node Value>

      containers:
      - name: <컨테이너 이름>
        image: <Docekr 이미지 경로>
        ports:
        - containerPort: <애플리케이션 포트>

        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
