Kubernetes/Manifest/fargate_deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: <이름>
  namespace: <네임스페이스>
  labels:
    <key> : <value> # Fargate Profile Label    
spec:
  replicas: 2
  selector:
    matchLabels:
      <key> : <value> # Fargate Profile Label    
      
  template:
    metadata:
      labels:
        <key> : <value> # Fargate Profile Label    
        
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      serviceAccountName: <ServiceAccount 이름>
      containers:
        - name: <컨테이너 이름>
          image: <Docekr 이미지 경로>
          ports:
          - containerPort: <애플리케이션 포트>

          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
