Kubernetes/Manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <ingress 이름>
  namespace: <네임스페이스 이름>
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: <ALB 이름>
    alb.ingress.kubernetes.io/scheme: 
    alb.ingress.kubernetes.io/subnets: <서브넷 아이디>, <서브넷 아이디>
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: <서비스 이름>
            port:
              number: 80
